# OpenCV_Examples

./: .gitmessage  CMakeLists.txt  README.md
src/: background_substract.cpp  display_image.cpp  webcam_capture.cpp
